rest-frontend: mount configuration file during installation

--- a/src/tools/rest-frontend/CMakeLists.txt
+++ b/src/tools/rest-frontend/CMakeLists.txt
@@ -4,6 +4,13 @@ if (NOT NPM_EXECUTABLE)
     remove_tool (${tool} "dependency manager 'npm' not found")
 else ()
 
+    # create simplified tool name without special characters
+    string (REGEX REPLACE "[^a-zA-Z]" "" tool_name_simplified ${tool})
+
+    # define configuration path
+    set (config_root "/sw/elektra/${tool_name_simplified}/#0/")
+    set (config_default_profile "current")
+
     # find installation path
     set (install_directory ${TARGET_TOOL_DATA_FOLDER}/${tool})
 
@@ -38,6 +45,7 @@ else ()
     if (NOT EXISTS ${install_directory}/application-config.json)
         install (FILES application-config.json DESTINATION ${install_directory})
     endif ()
+    install (CODE "execute_process (COMMAND kdb mount ${CMAKE_INSTALL_PREFIX}/${install_directory}/application-config.json \"system${config_root}${config_default_profile}\" yajl)")
     install (PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/run-${tool} ${CMAKE_CURRENT_BINARY_DIR}/stop-${tool}
              ${CMAKE_CURRENT_BINARY_DIR}/configure-${tool} DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
 
