rest-backend: remove underscore (_) from conf keys

--- a/src/tools/rest-backend/config-specification.ini
+++ b/src/tools/rest-backend/config-specification.ini
@@ -8,12 +8,12 @@ check/type = string
 description = A link to the compiled blueprint describing the API.
 example = https://doc.libelektra.org/api/snippet-sharing.html
 
-[_/backend/jwt/encryption_key]
+[_/backend/jwt/encryptionkey]
 check/type = string
 description = A secret string used to encrypt session tokens (JWT).
 example = al3h120d8a_19s
 
-[_/backend/jwt/expiration_time]
+[_/backend/jwt/validity]
 check/type = int
 description = The number of seconds a JWT is valid from its creation.
 example = 3600
