rest-backend: fix and improve default configuration

--- a/src/tools/rest-backend/CMakeLists.txt
+++ b/src/tools/rest-backend/CMakeLists.txt
@@ -18,7 +18,12 @@ else ()
     set (config_default_profile "current")
 
     set (install_directory ${TARGET_TOOL_DATA_FOLDER}/${tool})
-    file (READ config-specification.ini configuration-specification)
+
+    configure_file (
+        "${CMAKE_CURRENT_SOURCE_DIR}/config-specification.ini"
+        "${CMAKE_CURRENT_BINARY_DIR}/config-specification.ini"
+    )
+    file (READ ${CMAKE_CURRENT_BINARY_DIR}/config-specification.ini configuration-specification)
 
     configure_file (
         "${CMAKE_CURRENT_SOURCE_DIR}/config.hpp.in"
@@ -63,7 +68,7 @@ else ()
     install (PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/run-${tool} ${CMAKE_CURRENT_BINARY_DIR}/stop-${tool}
              DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
 
-    install (FILES config-specification.ini DESTINATION ${KDB_DB_SPEC} RENAME ${tool}-spec.ini)
+    install (FILES ${CMAKE_CURRENT_BINARY_DIR}/config-specification.ini DESTINATION ${KDB_DB_SPEC} RENAME ${tool}-spec.ini)
     install (CODE "execute_process (COMMAND kdb mount ${tool}-spec.ini \"spec${config_root}\" ni)")
 
     generate_manpage (kdb-run-${tool} FILENAME ${CMAKE_CURRENT_BINARY_DIR}/README.md)
