--- a/src/tools/rest-backend/config-specification.ini
+++ b/src/tools/rest-backend/config-specification.ini
@@ -1,12 +1,12 @@
 [current/backend/api/description/raw]
 check/type = string
 description = A link to the blueprint describing the API.
-example = https://doc.libelektra.org/api/snippet-sharing.md
+default = https://git.libelektra.org/tree/master/doc/api_blueprints/snippet-sharing.apib
 
 [current/backend/api/description/html]
 check/type = string
 description = A link to the compiled blueprint describing the API.
-example = https://doc.libelektra.org/api/snippet-sharing.html
+default = https://doc.libelektra.org/restapi/@KDB_VERSION_MAJOR@.@KDB_VERSION_MINOR@.@KDB_VERSION_MICRO@/snippet-sharing.html
 
 [current/backend/jwt/encryption/secret]
 check/type = string
@@ -102,3 +102,10 @@ check/type/min = 0
 check/type/max = 100
 description = The required rank a user needs to be able to delete user accounts of other users.
 default = 100
+
+[current/backend/permissions/rank/default]
+check/type = int
+check/type/min = 0
+check/type/max = 100
+description = The default rank new users will receive on registration.
+default = 10
