rest-frontend: add configuration for preferred plugins in format list (shown on top)

--- a/src/tools/rest-frontend/application-config.json
+++ b/src/tools/rest-frontend/application-config.json
@@ -16,6 +16,9 @@
                     "scope": "v1"
                 }
             }
+        },
+        "formats": {
+            "preferred": ["line", "ni", "xmltool"]
         }
     },
     "github": {
