rest-frontend: improve configuration handling
- by default only config template available
- template copied and mounted by script (preserving existing config)
- re-installation of frontend does not override configuration

--- a/src/tools/rest-frontend/CMakeLists.txt
+++ b/src/tools/rest-frontend/CMakeLists.txt
@@ -45,10 +45,8 @@ else ()
 
     # install files to destination
     install (DIRECTORY public resources DESTINATION ${install_directory})
-    install (FILES package.json README.md ${CMAKE_CURRENT_BINARY_DIR}/Gruntfile.js DESTINATION ${install_directory})
-    if (NOT EXISTS ${CMAKE_INSTALL_PREFIX}/${install_directory}/application-config.json)
-        install (FILES application-config.json DESTINATION ${install_directory})
-    endif ()
+    install (FILES package.json README.md ${CMAKE_CURRENT_BINARY_DIR}/Gruntfile.js application-config.json.tpl
+             DESTINATION ${install_directory})
     install (PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/run-${tool} ${CMAKE_CURRENT_BINARY_DIR}/stop-${tool}
              ${CMAKE_CURRENT_BINARY_DIR}/configure-${tool} ${CMAKE_CURRENT_BINARY_DIR}/mount-${tool}-config
              DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
