rest-backend: fix test + spec (replace bool by boolean)

--- a/src/tools/rest-backend/config-specification.ini.in
+++ b/src/tools/rest-backend/config-specification.ini.in
@@ -150,7 +150,7 @@ check/type = long
 description = User application objects are generally cached in special pool for future faster reuse, this parameter defines maximal number of applications that can be cached there. By default it is twice of size of service.worker_threads.
 
 [@config_default_profile@/cppcms/service/disable_xpowered_by]
-check/type = bool
+check/type = boolean
 description = By default CppCMS sends X-Powered-By: CppCMS/X.Y.Z handler in response, this can be disabled by setting this parameter to true.
 default = false
 
@@ -160,7 +160,7 @@ description = The default size of the output buffer that is used for caching out
 default = 16384
 
 [@config_default_profile@/cppcms/service/generate_http_headers]
-check/type = bool
+check/type = boolean
 description = Send the HTTP headers in response rather then CGI ones. Useful for broken SCGI connectors like isapi_scgi.
 default = false
 
@@ -184,12 +184,12 @@ check/type = string
 description = The location of temporary upload files. By default they are saved in the temporary directory defined by TEMP or TMP environment variable, or if they undefined it would use /tmp as a path for temporary files.
 
 [@config_default_profile@/cppcms/security/display_error_message]
-check/type = bool
+check/type = boolean
 description = When the exception is thrown by user application and this parameter set to true its message what() would be displayed in 500 Internal Server error page, it is useful for debugging. However it should never be used in production environment.
 default = false
 
 [@config_default_profile@/cppcms/daemon/enable]
-check/type = bool
+check/type = boolean
 description = Create daemon process - fork off and become session leader.
 default = false
 
