--- a/src/tools/web/client/package.json
+++ b/src/tools/web/client/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "material-ui": "^0.15.4",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
+    "react": "15.3.1",
+    "react-dom": "15.3.1",
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.6.0",
