--- a/src/tools/web/client/package.json
+++ b/src/tools/web/client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "build": "webpack && npm run build:assets",
+    "build": "cross-env NODE_ENV=production webpack && npm run build:assets",
     "build:assets": "cp index.html dist/ && cp -r css dist/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,7 +16,8 @@
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.6.0",
     "redux-promises": "^1.0.0",
-    "rgx": "^0.2.4"
+    "rgx": "^0.2.4",
+    "cross-env": "^2.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
