--- a/src/tools/web/clusterd/package.json
+++ b/src/tools/web/clusterd/package.json
@@ -20,7 +20,8 @@
     "debug-dude": "^1.0.3",
     "express": "^4.14.0",
     "node-fetch": "^1.6.1",
-    "node-uuid": "^1.4.7"
+    "node-uuid": "^1.4.7",
+    "cross-env": "^2.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
@@ -29,7 +30,6 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-register": "^6.11.6",
     "babel-runtime": "^6.11.6",
-    "babel-watch": "^2.0.2",
-    "cross-env": "^2.0.0"
+    "babel-watch": "^2.0.2"
   }
 }
