--- a/src/tools/web/elektrad/package.json
+++ b/src/tools/web/elektrad/package.json
@@ -2,7 +2,11 @@
   "name": "@elektra-web/elektrad",
   "version": "1.0.0",
   "description": "server to remotely control elektra",
-  "keywords": ["elektra", "elektra-web", "elektrad"],
+  "keywords": [
+    "elektra",
+    "elektra-web",
+    "elektrad"
+  ],
   "homepage": "http://git.libelektra.org/blob/master/src/tools/web/",
   "license": "MIT",
   "main": "src/index.js",
@@ -13,7 +17,8 @@
     "start:prod": "cross-env DEBUG=elektrad:*,-*debug,-*log node build/",
     "start:prod:verbose": "cross-env DEBUG=elektrad:* node build/",
     "start:dev": "cross-env NODE_ENV=development DEBUG=elektrad:* babel-watch src/",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run lint",
+    "lint": "eslint src"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
@@ -23,11 +28,14 @@
   "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-core": "^6.11.4",
+    "babel-eslint": "^7.1.1",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-register": "^6.11.6",
     "babel-runtime": "^6.11.6",
     "babel-watch": "^2.0.2",
-    "cross-env": "^2.0.0"
+    "cross-env": "^2.0.0",
+    "eslint": "^3.11.1",
+    "eslint-config-standard": "^6.2.1"
   }
 }
