rest-frontend: add build date to index.html as meta tag

--- a/src/tools/rest-frontend/resources/assets/html/index.html.in
+++ b/src/tools/rest-frontend/resources/assets/html/index.html.in
@@ -14,6 +14,7 @@
         <meta name="author" content="Namoshek">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="referrer" content="no-referrer">
+        <meta name="build-date" content="/* @echo BUILDDATE */">
 
         <!-- Favicon -->
         <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.ico">
