Travis: Build Qt with D-Bus support
Before this change the build would fail, since the Qt-GUI requires
D-Bus.

We use the flag `-verbose`, since building Qt takes quite long and the
Travis build job terminates if it does not receive any output for 10
minutes.

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_install:
       brew install yajl;
       brew install augeas --HEAD;
       brew install dbus;
-      brew install qt5;
+      brew install qt5 --with-dbus -verbose;
       brew install discount;
       brew install libgit2;
       export Qt5_DIR=/usr/local/opt/qt5;
