rest-backend: adjust service to use new PluginVariantsDatabase

--- a/src/tools/rest-backend/tests/CMakeLists.txt
+++ b/src/tools/rest-backend/tests/CMakeLists.txt
@@ -13,8 +13,5 @@ file (GLOB TESTS test_*.cpp)
 foreach (file ${TESTS})
     get_filename_component (name ${file} NAME_WE)
     add_gtest (${name} LINK_TOOLS SOURCES $<TARGET_OBJECTS:tmp_${tool}>)
-    target_link_elektra (${name} ${Boost_LIBRARIES})
-    target_link_elektra (${name} ${CPPCMS_LIBRARY})
-    target_link_elektra (${name} ${LIBJWT_LIBRARY})
-    target_link_elektra (${name} ${OPENSSL_LIBRARIES})
+    target_link_elektra (${name} ${Boost_LIBRARIES} ${CPPCMS_LIBRARY} ${LIBJWT_LIBRARY} ${OPENSSL_LIBRARIES})
 endforeach (file ${TESTS})
