rest-frontend: rss feed icon visible in firefox (plugin required!)

--- a/src/tools/rest-frontend/resources/assets/html/index.html.in
+++ b/src/tools/rest-frontend/resources/assets/html/index.html.in
@@ -19,6 +19,9 @@
         <!-- Favicon -->
         <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.ico">
 
+        <!-- RSS Info -->
+        <link rel="alternate" type="application/atom+xml" href="rss/feed.rss" title="Elektra RSS Feed">
+
         <!-- Pace (load animation for requests) -->
         <script type="text/javascript">
             window.paceOptions = {
