augeas: fix prefix for non-default installations
as discussed in #1187

--- a/src/plugins/augeas/CMakeLists.txt
+++ b/src/plugins/augeas/CMakeLists.txt
@@ -2,6 +2,8 @@ if (DEPENDENCY_PHASE)
 	find_package (Augeas)
 	find_package (LibXml2)
 
+	set (LIBAUGEAS_COMPILE_DEFINITIONS LIBAUGEAS_PREFIX="${LIBAUGEAS_PREFIX}")
+
 	if (LIBAUGEAS_FOUND AND LIBXML2_FOUND)
 		try_compile (HAS_LIBAUGEAS16
 			"${CMAKE_BINARY_DIR}"
@@ -28,6 +30,8 @@ add_plugin(augeas
 	INCLUDE_DIRECTORIES
 		${LIBAUGEAS_INCLUDE_DIR}
 		${LIBXML2_INCLUDE_DIR}
+	COMPILE_DEFINITIONS
+		"${LIBAUGEAS_COMPILE_DEFINITIONS}"
 	LINK_ELEKTRA
 		elektra-meta
 		elektra-proposal
