Doxygen: Properly escape location of MLC
This change should address the problem mentioned in commit 5f628938
**properly**: The newest versions of Doxygen (`1.8.12`) would not
produce a correct version of the PDF manual anymore if the build path
contained whitespace.

Before this change the index of the PDF version of the manual would not
include the name of the plugins anymore.

This commit fixes #482.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -54,6 +54,9 @@ if (DOXYGEN_FOUND)
 	# fix usage with wine
 	# https://github.com/ElektraInitiative/libelektra/pull/340#discussion_r44044444
 	find_util (markdownlinkconverter MARKDOWN_LINK_CONVERTER "")
+	if (DOXYGEN_VERSION VERSION_GREATER "1.8.11")
+		set (MARKDOWN_LINK_CONVERTER "\\\"${MARKDOWN_LINK_CONVERTER}\\\"")
+	endif ()
 
 	configure_file (
 		"${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile"
