--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -492,7 +492,7 @@ description= do not allow the key to be overwritten by a merger plugin
 type= program code
 status= idea
 description= evaluate expression to check if key should be included, program should
- abort or however evalute plugin is configured
+ abort or however evaluate plugin is configured
 
 
 
