--- a/src/bindings/gsettings/CMakeLists.txt
+++ b/src/bindings/gsettings/CMakeLists.txt
@@ -32,7 +32,7 @@ endif ()
 
 include_directories (${GLIB_INCLUDE_DIRS})
 add_library (elektrasettings SHARED elektrasettingsbackend.c ${ELEKTRA_HEADERS})
-set (GSETTINGS_MODULE_PRIORITY 200 CACHE STRING "GIO Module Priority. Lower then 100 means dconf backend will be default.")
+set (GSETTINGS_MODULE_PRIORITY 200 CACHE STRING "GIO Module Priority. Lower than 100 means dconf backend will be default.")
 target_compile_definitions (elektrasettings PRIVATE G_ELEKTRA_SETTINGS_MODULE_PRIORITY=${GSETTINGS_MODULE_PRIORITY})
 if (GELEKTRA_LIBRARY)
 	include(LibFindMacros)
