website: fix link, rename Readme

--- a/src/tools/rest-frontend/resources/structure.json.in
+++ b/src/tools/rest-frontend/resources/structure.json.in
@@ -12,7 +12,7 @@
                 "dev-comment": "A list of documentation files that are important for new users. Could be replaced by 'parsereadme' type in future.",
                 "children": [
                     {
-                        "name": "Readme",
+                        "name": "Github Main Page",
                         "type": "staticfile",
                         "options": {
                             "path": "README.md"
